test-app/templates/game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: game-ingress   #tri-backend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/group.name: dev6
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /  #tri/
            pathType: Prefix
            backend:
              service:
                name: games-app
                port: 
                  number: 80
